<resources>
    <string name="app_name">Dino Pedia</string>
    <string name="info_family_icon">Family Icon</string>
    <string name="info_family_name">Family Name</string>
    <string name="info_family_desc">Family Desc</string>
    <string name="info_family_period_time">Life Time Period</string>
    <string name="info_family_physics_characteristic">Family Characteristic</string>
    <string name="info_family_habit">Family Habit</string>
    <string name="info_family_environment">Family Environment</string>
    <string name="info_dino_icon">Dino Icon</string>
    <string name="info_dino_name">Dino Name</string>
    <string name="info_dino_desc">Dino Desc</string>
    <string name="info_dino_period_time">Life Time Period</string>
    <string name="info_dino_physics_characteristic">Family Characteristic</string>
    <string name="info_dino_habit">Family Habit</string>
    <string name="info_dino_food">Dino food</string>
    <string name="info_dino_length">Dino Length</string>
    <string name="info_dino_height">Dino Height</string>
    <string name="info_dino_weight">Dino Weight</string>
    <string name="info_dino_weakness">Dino Weakness</string>
    <string-array name="family_icon">
        <item>@drawable/theropoda</item>
        <item>@drawable/sauropoda</item>
        <item>@drawable/ornithopoda</item>
        <item>@drawable/ankylosauria</item>
        <item>@drawable/ceratopsia</item>
        <item>@drawable/pachycephalosauria</item>
        <item>@drawable/theeropoda</item>
        <item>@drawable/sauropodomorph</item>
    </string-array>
    <string-array name="family_name">
        <item>Theropoda</item>
        <item>Sauropoda</item>
        <item>Ornithopoda</item>
        <item>Ankylosauria</item>
        <item>Ceratopsia</item>
        <item>Pachycephalosauria</item>
        <item>Aves</item>
        <item>Sauropodomorph</item>
    </string-array>
    <string-array name="start_index">
        <item>0</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
    </string-array>
    <string-array name="end_index">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>9</item>
        <item>11</item>
        <item>13</item>
        <item>15</item>
    </string-array>
    <string-array name="family_desc">
        <item>Dinosaurus karnivora berkaki dua, termasuk predator puncak dan nenek moyang burung modern.</item>
        <item>Dinosaurus herbivora berleher panjang berkaki empat, dikenal sebagai raksasa daratan dengan ukuran terbesar di antara dinosaurus lainnya.</item>
        <item>Dinosaurus herbivora berkaki dua, beragam kelompok dengan ciri khas paruh dan beberapa memiliki struktur pertahanan seperti pelat dan duri.</item>
        <item>Dinosaurus herbivora berkaki empat yang berlapis baja, memiliki pertahanan kuat dengan lempengan tulang dan duri untuk melindungi diri dari predator.</item>
        <item>Dinosaurus herbivora berkaki empat bertanduk, dikenal dengan hiasan kepala bercula dan plat tulang besar untuk bertarung atau pertahanan.</item>
        <item>Dinosaurus herbivora berkaki dua dengan kepala tebal, diperkirakan kepala digunakan untuk bertarung antar sesama atau mempertahankan diri dengan cara menanduk.</item>
        <item>Kelompok dinosaurus theropoda yang berevolusi menjadi burung modern, memiliki ciri khas sayap, bulu, dan paruh.</item>
        <item>Kelompok yang lebih luas mencakup sauropoda dan kerabat dekat mereka, termasuk sauropoda berleher pendek dan titanosaurus berukuran raksasa.</item>
    </string-array>
    <string-array name="family_period_time">
        <item>Trias Akhir - Kapur Akhir (230 - 66 juta tahun lalu)</item>
        <item>Jura Akhir - Kapur Akhir (157 - 66 juta tahun lalu)</item>
        <item>Jura Awal - Kapur Akhir (201 - 66 juta tahun lalu)</item>
        <item>Kapur Awal - Kapur Akhir (145 - 66 juta tahun lalu)</item>
        <item>Kapur Awal - Kapur Akhir (145 - 66 juta tahun lalu)</item>
        <item>Kapur Akhir (76 - 66 juta tahun lalu)</item>
        <item>Kapur Akhir (100 - 66 juta tahun lalu) - sekarang</item>
        <item>Trias Akhir - Kapur Akhir (230 - 66 juta tahun lalu)</item>
    </string-array>
    <string-array name="family_physics_characteristic">
        <item>Berkaki dua, Karnivora, Gigi tajam, Cakar di kaki depan, Berevolusi menjadi burung</item>
        <item>Berkaki empat, Herbivora, Leher panjang, Ekor panjang, Ukuran raksasa</item>
        <item>Berkaki dua, Herbivora, Paruh, Pelat dan duri di punggung</item>
        <item>Berkaki empat, Herbivora, Tubuh berlapis baja, Ekor pendek dan kuat</item>
        <item>Berkaki empat, Herbivora, Tanduk di kepala, Plat tulang di leher</item>
        <item>Berkaki dua, Herbivora, Tengkorak tebal, Bertarung dengan kepala</item>
        <item>Berkaki dua, Omnivora, Sayap, bulu, dan paruh, Berasal dari theropoda</item>
        <item>Berkaki empat, Herbivora, Leher panjang, Ekor panjang, Nenek moyang sauropoda</item>
    </string-array>
    <string-array name="family_habit">
        <item>Theropoda - Karnivora, berburu mangsa, hidup berkelompok</item>
        <item>Sauropoda - Herbivora, memakan tumbuhan, hidup berkelompok</item>
        <item>Ornithopoda - Herbivora, memakan tumbuhan, hidup berkelompok</item>
        <item>Ankylosauria - Herbivora, memakan tumbuhan, hidup soliter</item>
        <item>Ceratopsia - Herbivora, memakan tumbuhan, hidup berkelompok</item>
        <item>Pachycephalosauria - Herbivora, memakan tumbuhan, hidup soliter</item>
        <item>Aves - Omnivora, memakan berbagai jenis makanan, hidup berkelompok dan soliter</item>
        <item>Sauropodomorph - Herbivora, memakan tumbuhan, hidup berkelompok</item>
    </string-array>
    <string-array name="family_environment">
        <item>Lingkungan hidup: Berbagai habitat, termasuk hutan, padang rumput, dan rawa</item>
        <item>Lingkungan hidup: Hutan dan padang rumput</item>
        <item>Lingkungan hidup: Hutan dan padang rumput</item>
        <item>Lingkungan hidup: Hutan dan padang rumput</item>
        <item>Lingkungan hidup: Padang rumput</item>
        <item>Lingkungan hidup: Hutan dan padang rumput</item>
        <item>Lingkungan hidup: Berbagai habitat, termasuk hutan, padang rumput, dan laut</item>
        <item>Lingkungan hidup: Hutan dan padang rumput</item>
    </string-array>
    <string-array name="dino_icon">
        <item>@drawable/trex</item>
        <item>@drawable/velociraptor</item>
        <item>@drawable/brachiosaurus</item>
        <item>@drawable/diplodocus</item>
        <item>@drawable/triceratops</item>
        <item>@drawable/edmontosaurus</item>
        <item>@drawable/ankyylosaurus</item>
        <item>@drawable/euplocephalus</item>
        <item>@drawable/centrosauruss</item>
        <item>@drawable/styracosauruss</item>
        <item>@drawable/pachycephalosauruss</item>
        <item>@drawable/stegoceratopss</item>
        <item>@drawable/archae</item>
        <item>@drawable/confuciusorniss</item>
        <item>@drawable/patagotitann</item>
        <item>@drawable/argentinosauruss</item>
    </string-array>
    <string-array name="dino_name">
        <item>Tyrannosaurus rex</item>
        <item>Velociraptor</item>
        <item>Brachiosaurus</item>
        <item>Diplodocus</item>
        <item>Triceratops</item>
        <item>Edmontosaurus</item>
        <item>Ankylosaurus</item>
        <item>Euoplocephalus</item>
        <item>Centrosaurus</item>
        <item>Styracosaurus</item>
        <item>Pachycephalosaurus</item>
        <item>Stegoceratops</item>
        <item>Archaeopteryx</item>
        <item>Confuciusornis</item>
        <item>Patagotitan</item>
        <item>Argentinosaurus</item>
    </string-array>
    <string-array name="dino_desc">
        <item>Theropoda karnivora berbadan besar dengan rahang kuat dan lengan kecil. Hidup berkelompok dan merupakan predator puncak.</item>
        <item>Theropoda karnivora berukuran ramping dan cerdas. Memiliki cakar melengkung di kaki belakang untuk berburu mangsa.</item>
        <item>Sauropoda herbivora ber leher panjang dan tubuh raksasa. Hidup berkelompok dan memakan dedaunan tinggi.</item>
        <item>Sauropoda herbivora ber leher panjang dan ekor panjang. Hidup berkelompok dan memakan dedaunan di berbagai ketinggian.</item>
        <item>Ceratopsia herbivora berbadan besar dengan tiga tanduk di kepala dan plat tulang di leher. Hidup berkelompok untuk perlindungan.</item>
        <item>Ornithopoda herbivora berbadan bebek dengan paruh dan jambul di kepala. Hidup berkelompok dan memakan tumbuhan darat.</item>
        <item>Ankylosauria herbivora berbadan berat dengan lapisan pelindung tulang dan gada di ekor. Hidup soliter dan memakan tumbuhan rendah.</item>
        <item>Ankylosauria herbivora berbadan berat dengan gada besar di ekor dan duri di punggung. Hidup soliter dan memakan tumbuhan rendah.</item>
        <item>Ceratopsia herbivora bertanduk di hidung dan frill di leher. Hidup berkelompok untuk perlindungan dari predator.</item>
        <item>Ceratopsia herbivora ber tanduk besar di moncong dan duri di frill leher. Hidup berkelompok untuk perlindungan dari predator.</item>
        <item>Pachycephalosauria herbivora bertengkorak tebal. Diduga menggunakan kepala untuk bertarung atau melindungi diri. Hidup soliter.</item>
        <item>Pachycephalosauria herbivora bertengkorak tebal dan duri di punggung. Diduga menggunakan kepala dan duri untuk perlindungan. Hidup soliter.</item>
        <item>Aves primitif dengan ciri-ciri reptil dan burung. Memiliki bulu, sayap, dan cakar pada kaki depan. Hidup soliter atau berkelompok kecil.</item>
        <item>Aves primitif mirip burung modern. Memiliki paruh tanpa gigi dan sayap untuk terbang. Diduga hidup berkelompok.</item>
        <item>Sauropodomorph herbivora berukuran raksasa dengan leher panjang dan ekor panjang. Hidup berkelompok dan memakan dedaunan tinggi.</item>
        <item>Sauropodomorph herbivora berukuran sangat besar, salah satu dinosaurus terbesar yang pernah ada. Hidup berkelompok dan memakan dedaunan tinggi.</item>
    </string-array>
    <string-array name="dino_period_time">
        <item>68-66 juta tahun yang lalu (Masa Kapur)</item>
        <item>85-70 juta tahun yang lalu (Masa Kapur)</item>
        <item>154-153 juta tahun yang lalu (Masa Jura Awal)</item>
        <item>154-152 juta tahun yang lalu (Masa Jura Awal)</item>
        <item>68-66 juta tahun yang lalu (Masa Kapur)</item>
        <item>73-66 juta tahun yang lalu (Masa Kapur)</item>
        <item>68-66 juta tahun yang lalu (Masa Kapur)</item>
        <item>76-66 juta tahun yang lalu (Masa Kapur)</item>
        <item>76-75 juta tahun yang lalu (Masa Kapur)</item>
        <item>76-75 juta tahun yang lalu (Masa Kapur)</item>
        <item>76-66 juta tahun yang lalu (Masa Kapur)</item>
        <item>68-66 juta tahun yang lalu (Masa Kapur)</item>
        <item>150-148 juta tahun yang lalu (Masa Jura Tengah)</item>
        <item>125-120 juta tahun yang lalu (Masa Kapur Akhir)</item>
        <item>102-97 juta tahun yang lalu (Masa Kapur Akhir)</item>
        <item>97-93 juta tahun yang lalu (Masa Kapur Akhir)</item>
    </string-array>
</resources>